commit main finito senza particolari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,13 +37,13 @@
   border: 1px solid #8C949C;
   padding: 5px;
   border-radius: 5px;
-
 }
-
 /*/ BARRA FIXATA */
 
 /* COMANDI GENERALI */
-
+.back-green{
+  background-color:#1ABC9C ;
+}
 
 .fp-padding-80{
   padding: 80px 0;
@@ -67,8 +67,30 @@
   text-transform: uppercase ;
 }
 
+.text-up-bla{
+  color: #333333;
+  text-transform: uppercase ;
+}
+
 .text-bold{
   font-weight:bolder ;
+}
+
+.star span{
+  font-size: 200%;
+  margin: auto 20px;
+}
+
+.line{
+  display: inline-block;
+  border: 2px solid #FFFFFF;
+  width: 20%;
+  margin-bottom: 11px;
+  border-radius: 5px;
+}
+
+.f-size-400{
+  font-size: 400%;
 }
 /* /COMANDI GENERALI */
 
@@ -84,97 +106,82 @@
   width: 30%;
 }
 
-.fp-jumbotron h2{
-  font-size: 400%;
-}
-
-.line{
-  display: inline-block;
-  border: 2px solid #FFFFFF;
-  width: 20%;
-  margin-bottom: 11px;
-  border-radius: 5px;
-}
-
-.fp-jumbotron .star span{
+.star span{
   color: #FFFFFF;
-  font-size: 180%;
-  margin: auto 20px;
 }
 
-.text-header{
+.fp-jumbotron>span{
   font-size: 150%;
 }
 /*/ HEADER */
 
+/* MAIN */
+/* PORTFOLIO */
+.sec-portfolio .star .line{
+  border-color: #2C3E50;
+}
 
-.cont-img{
+.sec-portfolio .star span{
+ color: #2C3E50;
+}
+
+.sec-portfolio .star{
+  margin-bottom: 30px;
+}
+
+.sec-portfolio img{
   border-radius: 10px;
-  margin-top: 30px;
-  padding: 15px;
+  margin-bottom: 25px;
+}
+/* / PORTFOLIO */
+
+/* ABOUT */
+.sec-about .line{
+  width: 15%;
 }
 
-.first-img{
-  background-color:#BA4D63 ;
-}
-.second-img{
-  background-color:#1FA4B6 ;
-}
-.third-img{
-  background-color:#140F0F ;
-}
-.fourth-img{
-  background-color:#1C83C1;
-}
-.fifth-img{
-  background-color:#1137B5 ;
-}
-.sixth-img{
-  background-color:#CCB2A3;
-  margin-bottom: 30px;
+.sec-about p{
+  color: #FFFFFF;
+  margin: 15px auto 35px;
 }
 
-.debug{
-  background-color:#1ABC9C ;
+.sec-about .button a{
+  border: 1px solid #FFFFFF;
+  color: #FFFFFF;
+  padding: 10px 10px;
+  border-radius:5px ;
+}
+/* / ABOUT */
+
+/* CONTACT  */
+.sec-contact form{
+ margin-top: 20px;
 }
 
-.title-2main{
-  margin-top:30px;
+.sec-contact .star .line{
+  border-color: #2C3E50;
+  width: 15%;
 }
 
-.star-2main,
-.title-2main,
-.botton{
-  background-color: #FFFFFF;
-  height: 30px;
-  margin-bottom:20px;
+.sec-contact .star span{
+ color: #2C3E50;
 }
 
-.paragraf{
-  height: 200px;
-  background-color: #FFFFFF;
-  margin-bottom: 30px;
+.fp-form-control{
+  border-bottom:1px solid #808080 ;
 }
 
-.title-contact{
-  background-color: #2C3E50;
-  height: 30px;
-  margin:20px auto;
+.fp-btn-green{
+  background-color: #1ABC9C;
+  border: none;
+  color: #FFFFFF;
+  padding: 10px 10px;
+  border-radius: 5px;
+  margin-top: 15px;
 }
+/*/ CONTACT  */
+/*/ MAIN */
 
-.star-contact,
-.camp{
-  background-color: #2C3E50;
-  height: 30px;
-  margin-bottom: 20px;
-}
-
-.botton-blue{
-  background-color: #2C3E50;
-  height: 30px;
-  margin-bottom: 30px;
-  margin-top: 100px;
-}
 
 .top-footer{
  background-color:#3A546D;
